welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:4: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		case (temp,isSummer) if (temp<=90 && temp>60 && isSummer=false) => return true		
                                                             ^squirrelPlay:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		case (temp,isSummer) if (temp<=100 && temp>60 && isSummer=true) => return true		
                                                              ^